<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activities.EditTeacherActivity"
              android:background="@color/white">


<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="?android:attr/colorPrimary"
        app:title="Add Subject"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ScrollView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/InputLabel"
                    android:id="@+id/name_label"
                    android:paddingLeft="8dp"
                    android:text="Name"/>
                <EditText
                    style="@style/EditText"
                    android:layout_width="200dp"
                    android:id="@+id/name"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_below="@+id/name_label"/>

                <TextView
                    style="@style/InputLabel"
                    android:paddingLeft="8dp"
                    android:text="Subject type"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/subject_type"
                    android:entries="@array/degrees"
                    android:layout_marginStart="24dp" />

                <TextView
                    style="@style/InputLabel"
                    android:paddingLeft="8dp"
                    android:text="Subject color tag"/>

                <ImageButton
                    style="@style/ListItem.Avatar"
                    android:id="@+id/color_tag"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_shape_orange"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_med">

                    <include layout="@layout/teacher_item"
                        android:id="@+id/teacher_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="80"/>
                    <ImageButton
                        android:id="@+id/teacher_select_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        style="@style/ListItem.FirstLine"
                        android:background="@drawable/edit_black_50"
                        android:contentDescription="Add/change teacher" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="Start date: "
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/subject_start_date"
                            android:layout_width="100dp"
                            style="@style/EditText"
                            android:layout_marginEnd="8dp"
                            android:text="2015-03-15"/>

                        <ImageView
                            android:id="@+id/subject_start_date_button"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:background="@color/white"
                            android:paddingBottom="2dp"
                            android:src="@drawable/date_pick_20"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="End date:   "
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/subject_end_date"
                            android:layout_width="100dp"
                            style="@style/EditText"
                            android:layout_marginEnd="8dp"
                            android:text="2015-03-15"/>

                        <ImageView
                            android:id="@+id/subject_end_date_button"
                            android:layout_width="wrap_content"
                            android:layout_height="32dp"
                            android:background="@color/white"
                            android:paddingBottom="2dp"
                            android:src="@drawable/date_pick_20"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            style="@style/DialogButton"
                            android:id="@+id/cancel_button"
                            android:layout_width="match_parent"
                            android:layout_weight="50"
                            android:text="CANCEL"
                            android:layout_toStartOf="@id/save_button"
                            android:layout_gravity="center_horizontal"/>
                        <TextView
                            style="@style/DialogButton"
                            android:id="@+id/save_button"
                            android:layout_width="match_parent"
                            android:layout_weight="50"
                            android:text="SAVE"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="right"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
</LinearLayout>