<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:background="@color/white">
    <ImageButton
        style="@style/ListItem.Avatar"
        android:id="@+id/teacher_icon"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_shape_orange"/>

    <TextView
        style="@style/ListItem.FirstLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher_name"
        android:id="@+id/teacher_name"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/teacher_icon"/>
    <TextView
        style="@style/ListItem.SecondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Professor"
        android:id="@+id/teacher_type"
        android:layout_below="@+id/teacher_name"
        android:layout_alignStart="@+id/teacher_name"/>

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/delete_black"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:contentDescription="Delete Teacher"
        android:visibility="gone"/>
</RelativeLayout>