<resources>
    <string name="app_name">StudentOrganizer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="dues_in">Dues in</string>
    <string name="due">Due</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>

    <!-- Subject type translations-->
    <string name="subject_type_credit">Credit</string>
    <string name="subject_type_exam">Exam</string>

    <!-- Subject edit strings-->
    <string name="subject_name_hint">Subject name...</string>
    <string name="subject_type_hint">Subject type:</string>
    <string name="subject_tag_hint">Subject color tag:</string>

    <string name="save">Save</string>

    <!-- Dashboard strings -->
    <string name="tasks">Tasks</string>
    <string name="teachers">Teachers</string>
    <string name="subjects">Subjects</string>
    <string name="marks">Marks</string>
    <string name="my_schedule">My Schedule</string>
    <string name="uni_schedule">University Schedule</string>
    <string name="seed_database">Seed Database</string>
    <string name="teacher_name">Teacher Name:</string>
    <string name="teacher_degree">Teacher\'s Degree:</string>
    <string name="teacher_select">Select teacher:</string>
    <string name="contacts">Contacts:</string>
    <string name="contact_name">Key</string>
    <string name="contact_value">Value</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="add_delete_contact">Add/Delete Contact</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_weekday">Choose weekday</string>
    <string name="choose_pair">Choose Pair</string>
    <string name="choose_subject">Choose Subject</string>
    <string name="enter_classroom">Enter Classroom</string>
</resources>
