...
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/my_schedule"
                android:text="@string/my_schedule"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/univ_schedule"
                android:text="@string/uni_schedule"/>
            <TextView
                style="@style/DashboardButtonText"
                android:id="@+id/seed"
                android:text="@string/seed_database"/>
        </LinearLayout>
...
