<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        style="@style/CalendarDayTitle"
        android:layout_width="30dp"
        android:id="@+id/pair"
        android:text="0"/>

    <TextView
        style="@style/CalendarDayTitle"
        android:id="@+id/time"
        android:layout_width="110dp"
        android:text="Hs:ms-Hf:mf"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/pair"/>
    <TextView
        style="@style/CalendarDayTitle"
        android:id="@+id/name"
        android:text="Sunject Name"
        android:layout_width="140dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/time"/>
    <TextView
        style="@style/CalendarDayTitle"
        android:id="@+id/classroom"
        android:text="aud"
        android:layout_marginStart="10dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/name"/>

    <ImageButton
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/delete_black"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:contentDescription="Delete subject" />
</RelativeLayout>