...
        android:layout_below="@id/test_name"
        android:layout_toEndOf="@+id/category_icon" />


    <ImageButton
        style="@style/ListItem.PrimaryAction"
        android:id="@+id/check_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_in_32"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp" />
...
